<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_weight="0.64"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.18"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPayAmt"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/needToPay"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvItemBought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1.56"
        android:text="@string/item_bought"
        android:textSize="15sp" />
</LinearLayout>
